--- a/parceria.html
+++ b/parceria.html
@@ -163,9 +163,9 @@ input, select{
       <div class="logo">Deboxe Customs</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
-      <a href="#">Início</a>
-      <a href="#">Preços</a>
-      <a href="#">Funcionários</a>
+      <a href="index.php">Início</a>
+      <a href="tabela.php">Preços</a>
+      <a href="funcionarios.php">Funcionários</a>
       <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
@@ -374,3 +374,4 @@ bloquearCopiar();
 
 </body>
 </html>
+
