--- a/tabela.html
+++ b/tabela.html
@@ -208,6 +208,7 @@ th{background:#f1f1f1}
         <a href="tabela.html">Preços ▾</a>
         <div class="dropdown-content">
           <a href="calculadora.html">Calculadora</a>
+          <a href="parceria.html">Parcerias</a>
         </div>
       </div>
 
@@ -483,6 +484,7 @@ document.addEventListener("keydown", function(e) {
 
 </body>
 </html>
+
 
 
 
