--- a/parceria.html
+++ b/parceria.html
@@ -163,9 +163,9 @@ input, select{
       <div class="logo">Deboxe Customs</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
-      <a href="index.php">Início</a>
-      <a href="tabela.php">Preços</a>
-      <a href="funcionarios.php">Funcionários</a>
+      <a href="index.html">Início</a>
+      <a href="tabela.html">Preços</a>
+      <a href="funcionarios.html">Funcionários</a>
       <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
@@ -374,4 +374,5 @@ bloquearCopiar();
 
 </body>
 </html>
+
 
