--- a/calculadora.html
+++ b/calculadora.html
@@ -406,24 +406,23 @@ function enviarDiscord(){
   }).then(()=>alert("Relatório enviado para o Discord ✅"));
 }
 
-<script>
+// ================= LIMPAR =================
 function limpar(){
-  // Desmarca TODOS os checkboxes (itens + parceria)
+  // desmarca todos os checkboxes
   document.querySelectorAll("input[type='checkbox']").forEach(el => {
     el.checked = false;
   });
 
-  // Limpa campos de texto
+  // limpa campos
   document.getElementById("nome").value = "";
   document.getElementById("id").value = "";
   document.getElementById("total").value = "";
   document.getElementById("texto").value = "";
 
-  // Força recálculo zerado
+  // recalcula
   calc();
 }
 </script>
-
 
 // ===== BLOQUEIO DE COPIAR - DESKTOP + MOBILE =====
 const isMobile = /Mobi|Android|iPhone|iPad/i.test(navigator.userAgent);
@@ -461,6 +460,7 @@ if (isMobile) {
 
 </body>
 </html>
+
 
 
 
