--- a/calculadora.html
+++ b/calculadora.html
@@ -423,7 +423,7 @@ function limpar(){
   calc();
 }
 </script>
-
+<script>
 // ===== BLOQUEIO DE COPIAR - DESKTOP + MOBILE =====
 const isMobile = /Mobi|Android|iPhone|iPad/i.test(navigator.userAgent);
 
@@ -460,6 +460,7 @@ if (isMobile) {
 
 </body>
 </html>
+
 
 
 
