--- a/pagamento.html
+++ b/pagamento.html
@@ -205,7 +205,7 @@ footer{
   <textarea id="relatorio" readonly></textarea>
 </div>
 
-<footer class="text-center py-4 text-muted">© <span id="year"></span> 021 CUSTOMS</footer>
+<footer class="text-center py-4 text-muted">© <span id="year"></span> Deboxe Customs</footer>
 
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
@@ -251,10 +251,10 @@ function gerarRelatorio(){
   texto += `💰 **Status do Pagamento:** ✅ Realizado\n`;
   texto += `O pagamento semanal da mecânica (R$ 1.000.000) foi efetuado mantendo sua oficina ativa e regularizada.\n\n`;
   texto += `🙏 **Agradecimento pelo serviço:**\n`;
-  texto += `A 021 CUSTOMS agradece pelo empenho e dedicação. Graças a você, a oficina continua funcionando de forma eficiente e organizada.\n\n`;
+  texto += `A Deboxe Customs agradece pelo empenho e dedicação. Graças a você, a oficina continua funcionando de forma eficiente e organizada.\n\n`;
   texto += `⚡ **Lembrete:**\n`;
   texto += `O pagamento semanal garante upgrades, benefícios e manutenção da mecânica.\n\n`;
-  texto += `🔧 **021 CUSTOMS – Mantenha sua mecânica em dia e evolua sempre!**\n`;
+  texto += `🔧 **Deboxe Customs – Mantenha sua mecânica em dia e evolua sempre!**\n`;
   texto += `════════════════════════════════`;
 
   relatorio.value = texto;
@@ -287,4 +287,5 @@ function limpar(){
 
 </body>
 </html>
+
 
