--- a/relatoriobl.html
+++ b/relatoriobl.html
@@ -78,12 +78,36 @@ textarea{
   padding:7px 12px;
   border-radius:8px;
 }
+#adminBtn{
+  position:fixed;
+  bottom:18px;
+  right:18px;
+  width:46px;
+  height:46px;
+  border-radius:50%;
+  border:none;
+  background:#ff9800;
+  color:#000;
+  font-size:20px;
+  font-weight:700;
+  cursor:pointer;
+  z-index:3000;
+  box-shadow:0 6px 16px rgba(0,0,0,.25);
+}
+#adminBtn:hover{background:#ffcc00}
+#adminPanel{
+  display:none;
+  background:#f1f1f1;
+  padding:18px;
+  border-radius:14px;
+  margin-top:20px;
+}
 </style>
 </head>
 
 <body>
 
-<!-- ===== HEADER / MENU ===== -->
+<!-- MENU -->
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
@@ -99,6 +123,7 @@ textarea{
       <a href="index.html">Início</a>
       <a href="tabela.html">Preços</a>
       <a href="funcionarios.html">Funcionários</a>
+      <a href="relatorio.html" style="font-weight:800">Relatório</a>
       <a href="https://discord.gg/Z72tjMRmUX" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
@@ -118,36 +143,44 @@ textarea{
   </div>
 </header>
 
-<!-- ===== CONTEÚDO ===== -->
+<!-- CONTEÚDO -->
 <div class="box">
 <h3 class="text-center">Relatório do Baú</h3>
 
 <label>Gerente Responsável</label>
-<input id="nome" class="form-control" placeholder="Somente letras">
+<input id="nome" class="form-control">
 
 <label>ID Responsável</label>
-<input id="idM" class="form-control" placeholder="Somente números">
+<input id="idM" class="form-control">
 
 <label>ID Comprador / Funcionário</label>
-<input id="idC" class="form-control" placeholder="Somente números">
+<input id="idC" class="form-control">
 
 <label class="mt-3">Itens</label>
 <div id="itens" class="checkbox-group mt-2"></div>
 
 <button class="btn btn-success mt-3 w-100" onclick="gerarRelatorio()">Gerar Relatório</button>
 <button class="btn btn-primary mt-2 w-100" onclick="enviarDiscord()">
-  <i class="fa-brands fa-discord"></i> Enviar para o Discord
+<i class="fa-brands fa-discord"></i> Enviar para o Discord
 </button>
 <button class="btn btn-danger mt-2 w-100" onclick="limpar()">Limpar</button>
 
 <textarea id="saida" readonly></textarea>
+
+<div id="adminPanel">
+  <h5>Administração do Estoque</h5>
+  <input class="form-control mt-2" placeholder="Área restrita">
 </div>
+</div>
+
+<button id="adminBtn">⚙️</button>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
 import { getFirestore, collection, getDocs, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
 
 const DISCORD_WEBHOOK = "https://discord.com/api/webhooks/1463030474879533253/JWef5V8rb0fVTnAV8E6vjKPa5b7mbuV5KfgBlYASbhBDd-WQA0MJ3Gwgy-sNWqttMDIC";
+const SENHA_ADMIN = "gerencia456";
 
 const app = initializeApp({
   apiKey:"AIzaSyD2zieCD4d-_olcWE6oOOqlepyxWvLGhyI",
@@ -158,17 +191,11 @@ const db = getFirestore(app);
 
 const container = document.getElementById("itens");
 const saida = document.getElementById("saida");
+const adminPanel = document.getElementById("adminPanel");
 
 let estoque = {};
 let relatorioGerado = false;
 let itensSelecionados = [];
-
-function somenteNumeros(el){ el.value = el.value.replace(/\D/g,''); }
-function somenteLetras(el){ el.value = el.value.replace(/[^a-zA-ZÀ-ÿ\s]/g,''); }
-
-nome.addEventListener("input",()=>somenteLetras(nome));
-idM.addEventListener("input",()=>somenteNumeros(idM));
-idC.addEventListener("input",()=>somenteNumeros(idC));
 
 async function carregarEstoque(){
   container.innerHTML="";
@@ -190,15 +217,9 @@ async function carregarEstoque(){
 async function gerarRelatorio(){
   const sel=[...document.querySelectorAll("input[type=checkbox]:checked")].map(i=>i.value);
   if(!sel.length) return alert("Selecione itens");
-  if(!nome.value||!idM.value||!idC.value) return alert("Preencha todos os campos");
 
   let total=0;
-  let texto=`🛠️ RELATÓRIO DO BAÚ
-Gerente: ${nome.value}
-ID: ${idM.value}
-Comprador: ${idC.value}
-
-`;
+  let texto=`🛠️ RELATÓRIO DO BAÚ\n\n`;
 
   for(const item of sel){
     total+=estoque[item].preco;
@@ -222,9 +243,8 @@ async function enviarDiscord(){
       username:"Deboxe Relatórios",
       embeds:[{
         title:"🛠️ Relatório do Baú",
-        color:0xe10600,
         description:"```"+saida.value+"```",
-        timestamp:new Date().toISOString()
+        color:0xe10600
       }]
     })
   });
@@ -251,45 +271,21 @@ function limpar(){
   itensSelecionados=[];
 }
 
+document.getElementById("adminBtn").onclick=()=>{
+  const senha = prompt("Senha de administração:");
+  if(senha===SENHA_ADMIN){
+    adminPanel.style.display =
+      adminPanel.style.display==="block"?"none":"block";
+  }else{
+    alert("Senha incorreta");
+  }
+};
+
 window.gerarRelatorio=gerarRelatorio;
 window.enviarDiscord=enviarDiscord;
 window.limpar=limpar;
 
 carregarEstoque();
-</script>
-<script>
-// ===== BLOQUEIO DE COPIAR - DESKTOP + MOBILE =====
-const isMobile = /Mobi|Android|iPhone|iPad/i.test(navigator.userAgent);
-
-// Bloqueio de clique direito
-document.addEventListener("contextmenu", e => e.preventDefault());
-
-// Bloqueio de teclas desktop
-document.addEventListener("keydown", function(e){
-  if (!isMobile) {
-    // Teclas de desenvolvedor
-    if (e.key === "F12") e.preventDefault();
-    if (e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key.toUpperCase())) e.preventDefault();
-    // Bloqueio de visualizar código, salvar e copiar
-    if (e.ctrlKey && ["u","s","c"].includes(e.key.toLowerCase())) e.preventDefault();
-  }
-});
-
-// Bloqueio de copiar em mobile
-if (isMobile) {
-  // Bloqueia seleção de texto
-  document.body.addEventListener("selectstart", e => e.preventDefault());
-
-  // Bloqueia toque longo em imagens e texto
-  document.body.addEventListener("touchstart", function(e){
-    if (e.target.tagName === "IMG") e.preventDefault();
-  }, {passive:false});
-
-  // Remove seleção após toque
-  document.body.addEventListener("touchend", e => {
-    window.getSelection().removeAllRanges();
-  });
-}
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
