--- a/relatoriobl.html
+++ b/relatoriobl.html
@@ -11,44 +11,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
-:root{
-  --vermelho:#e10600;
-  --dourado:#ffcc00;
-}
-*{user-select:none}
 body{
   font-family:'Inter',sans-serif;
   background:#fff;
-  color:#111;
-  padding-top:130px;
-}
-.topbar{
-  position:fixed;
-  top:0;
-  width:100%;
-  z-index:1000;
-  background:linear-gradient(90deg,#000,#1a0000,#000);
-  border-bottom:3px solid var(--vermelho);
-  padding:18px 0;
-}
-.logo{
-  font-weight:800;
-  font-size:1.35rem;
-  background:linear-gradient(135deg,var(--vermelho),var(--dourado));
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+  padding-top:60px;
 }
 .box{
   background:#fff;
   padding:30px;
   border-radius:18px;
   max-width:780px;
-  margin:60px auto;
+  margin:auto;
   box-shadow:0 10px 30px rgba(0,0,0,.12);
 }
-textarea{width:100%;height:220px;font-family:monospace}
 .checkbox-group{display:flex;flex-wrap:wrap;gap:12px}
 .checkbox-group label{background:#eee;padding:7px 12px;border-radius:8px}
+textarea{width:100%;height:220px;font-family:monospace}
 </style>
 </head>
 
@@ -74,8 +52,8 @@ oninput="this.value=this.value.replace(/[^0-9]/g,'')">
 <label class="mt-3">Itens</label>
 <div id="itens" class="checkbox-group mt-2"></div>
 
-<button id="btnGerar" class="btn btn-success mt-3 w-100" onclick="gerarRelatorio()">Gerar Relatório</button>
-<button id="btnEnviar" class="btn btn-primary mt-2 w-100" onclick="enviarDiscord()">
+<button class="btn btn-success mt-3 w-100" onclick="gerarRelatorio()">Gerar Relatório</button>
+<button class="btn btn-primary mt-2 w-100" onclick="enviarDiscord()">
 <i class="fa-brands fa-discord"></i> Enviar para o Discord
 </button>
 
@@ -86,13 +64,13 @@ oninput="this.value=this.value.replace(/[^0-9]/g,'')">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
 import { getFirestore, collection, getDocs, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
 
-// ===== CONFIG =====
-const DISCORD_WEBHOOK = "SEU_WEBHOOK_AQUI";
+/* ================= CONFIG ================= */
+const DISCORD_WEBHOOK = "https://discord.com/api/webhooks/1463030474879533253/JWef5V8rb0fVTnAV8E6vjKPa5b7mbuV5KfgBlYASbhBDd-WQA0MJ3Gwgy-sNWqttMDIC";
 
-// 🔐 IDS DE GERENTES AUTORIZADOS
-const GERENTES = ["12345","67890","99999"];
+// IDS DOS GERENTES AUTORIZADOS
+const GERENTES = ["52853","48824","55586","53730"];
 
-// FIREBASE
+/* ================= FIREBASE ================= */
 const app = initializeApp({
   apiKey:"AIzaSyD2zieCD4d-_olcWE6oOOqlepyxWvLGhyI",
   authDomain:"centralrace-c4ad0.firebaseapp.com",
@@ -100,19 +78,40 @@ const app = initializeApp({
 });
 const db = getFirestore(app);
 
-// ELEMENTOS
+/* ================= VARIÁVEIS ================= */
 const container = document.getElementById("itens");
 const saida = document.getElementById("saida");
-const btnGerar = document.getElementById("btnGerar");
-const btnEnviar = document.getElementById("btnEnviar");
 
 let estoque = {};
 let itensSelecionados = [];
 let relatorioGerado = false;
 
-// ===== SEGURANÇA =====
+/* ================= SEGURANÇA ================= */
 function ehGerente(){
   return GERENTES.includes(document.getElementById("idM").value.trim());
+}
+
+function validarDados(){
+  const nome = document.getElementById("nome").value.trim();
+  const idM  = document.getElementById("idM").value.trim();
+  const idC  = document.getElementById("idC").value.trim();
+
+  if(!/^[A-Za-zÀ-ÿ\s]{3,}$/.test(nome)){
+    alert("❌ Nome inválido. Use somente letras.");
+    return false;
+  }
+
+  if(!/^[0-9]{3,}$/.test(idM)){
+    alert("❌ ID do gerente inválido.");
+    return false;
+  }
+
+  if(!/^[0-9]{3,}$/.test(idC)){
+    alert("❌ ID do funcionário inválido.");
+    return false;
+  }
+
+  return true;
 }
 
 function bloquearTudo(){
@@ -125,15 +124,17 @@ function liberarTudo(){
   saida.value="";
 }
 
-// ===== EVENTO AUTOMÁTICO =====
+/* ================= EVENTO ID GERENTE ================= */
 document.getElementById("idM").addEventListener("input",()=>{
   if(ehGerente()) liberarTudo();
   else bloquearTudo();
 });
 
-// ===== ESTOQUE =====
+/* ================= ESTOQUE ================= */
 async function carregarEstoque(){
   container.innerHTML="";
+  estoque={};
+
   const snap = await getDocs(collection(db,"estoque"));
   snap.forEach(d=>{
     estoque[d.id]=d.data();
@@ -147,9 +148,10 @@ async function carregarEstoque(){
   });
 }
 
-// ===== GERAR RELATÓRIO =====
+/* ================= RELATÓRIO ================= */
 window.gerarRelatorio = async function(){
   if(!ehGerente()) return alert("🚫 Apenas gerentes.");
+  if(!validarDados()) return;
 
   const sel=[...document.querySelectorAll("input[type=checkbox]:checked")].map(i=>i.value);
   if(!sel.length) return alert("Selecione itens");
@@ -167,13 +169,15 @@ window.gerarRelatorio = async function(){
 
   texto+=`\nTOTAL: R$ ${total}`;
   saida.value=texto;
+
   itensSelecionados=sel;
   relatorioGerado=true;
 }
 
-// ===== ENVIAR DISCORD =====
+/* ================= DISCORD ================= */
 window.enviarDiscord = async function(){
   if(!ehGerente()) return alert("🚫 Apenas gerentes.");
+  if(!validarDados()) return;
   if(!relatorioGerado) return alert("Gere o relatório primeiro");
 
   await fetch(DISCORD_WEBHOOK,{
@@ -195,13 +199,13 @@ window.enviarDiscord = async function(){
     });
   }
 
-  alert("Relatório enviado!");
+  alert("Relatório enviado com sucesso!");
   relatorioGerado=false;
   itensSelecionados=[];
   carregarEstoque();
 }
 
-// ===== INIT =====
+/* ================= INIT ================= */
 bloquearTudo();
 carregarEstoque();
 </script>
